--- a/index.html
+++ b/index.html
@@ -302,11 +302,12 @@ transform: translate(-50%, -50%);
 
       <div class="title">
 
-Fullscreen Overlay Navigation Bar</div>
+html part</div>
 
-<p>
+</br>
 
-with HTML & CSS Neon Effect</p>
+
+
 
 </div>
 
