--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ transform: translate(-50%, -50%);
 
       <ul>
 
-<li><a href="https://swk3087.github.io/taste_wep1/#">홈</a></li>
+<li><a href="https://swk3087.github.io/taste_wep1/">홈</a></li>
 
 <li><a href="#">마이페이지</a></li>
 
