Update and rename index.html to home.html

--- a/home.html
+++ b/home.html
@@ -284,15 +284,14 @@ transform: translate(-50%, -50%);
 
       <ul>
 
-<li><a href="https://swk3087.github.io/taste_wep1/">홈</a></li>
 
-<li><a href="#">마이페이지</a></li>
+<li><a href="https://swk3087.github.io/taste_wep1/">home</a></li>
 
-<li><a href="#">만들기</a></li>
+<li><a href="#">html</a></li>
 
-<li><a href="#">공유하기</a></li>
+<li><a href="#">css</a></li>
 
-<li><a href="#">문의하기</a></li>
+<li><a href="#">javascript</a></li>
 
 </ul>
 
@@ -302,7 +301,8 @@ transform: translate(-50%, -50%);
 
       <div class="title">
 
-home</div>
+
+<h4>home</h4> </div>
 
 </br>
 
