--- a/home.html
+++ b/home.html
@@ -285,7 +285,7 @@ transform: translate(-50%, -50%);
       <ul>
 
 
-<li><a href="https://swk3087.github.io/taste_wep1/">home</a></li>
+<li><a href="https://swk3087.github.io/taste_wep1/home.html">home</a></li>
 
 <li><a href="#">html</a></li>
 
