--- a/home.html
+++ b/home.html
@@ -287,9 +287,9 @@ transform: translate(-50%, -50%);
 
 <li><a href="https://swk3087.github.io/taste_wep1/home.html">home</a></li>
 
-<li><a href="#">html</a></li>
+<li><a href="https://swk3087.github.io/taste_wep1/html.html">html</a></li>
 
-<li><a href="#">css</a></li>
+<li><a href="https://swk3087.github.io/taste_wep1/css.html">css</a></li>
 
 <li><a href="#">javascript</a></li>
 
