--- a/css.html
+++ b/css.html
@@ -8,7 +8,7 @@
 
  <head>
 
- <title>index.html</title>
+ <title>css</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
