--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 
  <head>
 
- <title>index.html</title>
+ <title>home</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
