--- a/home.html
+++ b/home.html
@@ -291,7 +291,7 @@ transform: translate(-50%, -50%);
 
 <li><a href="https://swk3087.github.io/taste_wep1/css.html">css</a></li>
 
-<li><a href="#">javascript</a></li>
+<li><a href="https://swk3087.github.io/taste_wep1/javascript.html">javascript</a></li>
 
 </ul>
 
