--- a/home.html
+++ b/home.html
@@ -302,7 +302,7 @@ transform: translate(-50%, -50%);
       <div class="title">
 
 
-<h4>home</h4> </div>
+<h4>home</h4><p>made서원겸</p> </div>
 
 </br>
 
