--- a/css.html
+++ b/css.html
@@ -286,13 +286,13 @@ transform: translate(-50%, -50%);
 
       <ul>
 
-<li><a href="https://swk3087.github.io/taste_wep1/home.html">home</a></li>
+<li><a href="https://swk3087.github.io/wep1/home.html">home</a></li>
 
-<li><a href="https://swk3087.github.io/taste_wep1/html.html">html</a></li>
+<li><a href="https://swk3087.github.io/wep1/html.html">html</a></li>
 
-<li><a href="https://swk3087.github.io/taste_wep1/css.html">css</a></li>
+<li><a href="https://swk3087.github.io/wep1/css.html">css</a></li>
 
-<li><a href="https://swk3087.github.io/taste_wep1/javascript.html">javascript</a></li>
+<li><a href="https://swk3087.github.io/wep1/javascript.html">javascript</a></li>
 
 </ul>
 
